@@ -200,6 +200,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #1665206 (partially): Move imports in cgitb to the top of the module
+  instead of performing them in functions. Helps prevent import deadlocking in
+  threads.
+
 - Actually make the SimpleXMLRPCServer CGI handler work.
 
 - Issue #2522: locale.format now checks its first argument to ensure it has
